# bilibili2text

./: pyproject.toml  test-yfinance.py
b2t/: cli.py  config.py  history.py  pipeline.py  stock_status.py
b2t/converter/: md_to_pdf.py  md_to_png.py
b2t/download/: __init__.py  metadata.py  subtitle.py  yutto.py  yutto_api.py  yutto_cli.py
b2t/storage/: local.py
b2t/stt/: qwen_asr.py
b2t/summarize/: litellm_client.py  llm.py
scripts/: delete_history_records.py
tests/: test_backend_refactor_boundaries.py  test_bilibili_subtitle_pipeline.py  test_history_metadata.py  test_local_storage_multipart.py  test_open_public_custom_llm.py  test_open_public_custom_llm_test_route.py  test_process_subtitle_preference.py  test_yutto_cli.py
web-ui/backend/: existing_transcriptions.py  job_store.py  jobs.py  runner.py  schemas.py  schemas_rag.py  services.py  settings.py  stock_cache.py
web-ui/backend/routes/: config_routes.py  download.py  history.py  process.py  rag.py  runtime_routes.py  summary.py
web-ui/frontend/: index.html
web-ui/frontend/src/: App.vue  style.css
web-ui/frontend/src/components/: CustomSelect.vue  FileList.vue  HistoryView.vue  ProcessView.vue  ProgressPanel.vue  PublicApiKeyView.vue  RagView.vue
web-ui/frontend/src/composables/: useConversion.js
web-ui/frontend/src/utils/: fileUtils.js  markdown.js
