[project]
name = "bilibili-to-text"
version = "0.1.0"
description = "Bilibili video to text: download audio → transcribe → Markdown → LLM summarization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alibabacloud-oss-v2>=1.2.4",
    "baostock>=0.9.1",
    "bilibili-cli>=0.6.2",
    "chromadb>=0.6.0",
    "dashscope>=1.25.12",
    "groq>=1.0.0",
    "httpx>=0.28.1",
    "litellm>=1.74.9",
    "minio>=7.2.12",
    "openai>=2.17.0",
    "playwright>=1.52.0",
    "pydub>=0.25.1",
    "reportlab>=4.4.9",
    "requests>=2.31.0",
    "rich>=13.7.1",
    "tickflow[all]>=0.1.21",
    "yfinance>=1.3.0",
    "yutto>=2.1.1",
]

[project.optional-dependencies]
cli = [
    "questionary>=2.0.0",
    "textual>=0.45.1",
]
web = [
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
all = [
    "bilibili-to-text[cli,web]",
]

[tool.setuptools.packages.find]
include = ["b2t*"]

[project.scripts]
b2t = "b2t.cli:main"
md-table-pdf = "b2t.converter.md_table_to_pdf:main"

[tool.pytest.ini_options]
pythonpath = ["."]
